--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
-<script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
-<script src="https://raw.githack.com/jeromeetienne/AR.js/2.0.8/aframe/build/aframe-ar.js"></script>
+<script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
+<script src="https://rawgit.com/jeromeetienne/ar.js/master/aframe/build/aframe-ar.js"></script>
+<script>THREEx.ArToolkitContext.baseURL = 'https://rawgit.com/jeromeetienne/ar.js/master/three.js/'</script>
 
 <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs='debugUIEnabled: false;' vr-mode-ui="enabled:false;">
+    <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false;'>
         <a-marker type='pattern' url='res/pattern-marker.patt'>
-            <a-entity position='-3 2 0' text="width: 5; value:hello"></a-entity>
+            <a-entity position='-3 2 0' text="width: 5; value:I am Psyduck. We are pokemon. We love you"></a-entity>
             <a-entity position='0 0 0' gltf-model="url(res/scene.gltf)"></a-entity>
         </a-marker>
-        <a-entity camera></a-entity>
     </a-scene>
 </body>
 </html>
